# dockerized_quant_api

./: README.md
docker-compose/: docker-compose.yml  redpanda.yml
fast_api/: .env  Dockerfile  Makefile  README.md  pyproject.toml
fast_api/src/: config.py  host_api.py  main.py
