[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["josema <savetudrac@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
yfinance = "^0.2.43"
black = "^24.8.0"
quixstreams = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
